--- a/index.html
+++ b/index.html
@@ -1461,7 +1461,7 @@
     <!-- Content (UNCHANGED) -->
     <div class="hero-content">
         <h1>Welcome to the AI-Collab Hack</h1>
-        <a href="https://forms.gle/kSBa4TwDgPA86zrx6"
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdRU1SgwxHkRLm0ANIriXard_lvJDazafInIQ9oA1bNSDgeCg/viewform?usp=dialog"
            target="_blank" class="register-btn">
             Register Now
         </a>
@@ -1482,15 +1482,17 @@
         </svg>
         <h3>Event Schedule</h3>
         <div class="schedule-item">
-            <strong>Expert Talk: <br>Reimagining Education in the age of AI</strong>
-            <span>Speaker : <a href="https://www.linkedin.com/in/tanujabapat/">Tanuja Ganu</a></span>
-            <span>February 4, 2026</span>
+            <strong>Expert Talk: <br>AI and Ethics</strong>
+            <span>Speaker : <a href="https://vijaykeswani.github.io/">Prof. Vijay Keswani</a></span>
+            <span>February 11, 2026</span>
             <span>3:30 pm - 5 pm</span>
-            <span>LH 310</span>
         </div>
         <div class="schedule-item">
             <strong>Hackathon</strong>
             <span>February 4-27, 2026</span>
+        </div>
+        <div class="schedule-item">
+            <strong>If you missed out on submission 1, you'll get a chance to do so on February 11th again.</strong>
         </div>
     </div>
 
@@ -1646,7 +1648,7 @@
         </div>
 
         
-         <div class="date-v-card highlight">
+         <div class="date-v-card">
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Expert Talk on AI tools for Higher Education</h4>
@@ -1656,7 +1658,7 @@
                 <p>Join the meet <a href="https://teams.microsoft.com/meet/42674212757833?p=e6P1czaw268Km1RqTj">here</a></p>
             </div>
         </div>
-        <div class="date-v-card">
+        <div class="date-v-card highlight">
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Hackathon begins</h4>
@@ -1668,11 +1670,11 @@
             <div class="v-content">
                 <h4>Submission 1</h4>
                 <p>February 4-10, 2026</p>
-                <p><i>Submission of workflow. Form will be released soon</i></p>
+                <p><i>Submission of workflow. Forms were filled out in class. Those who missed will get a chance to fill it again.</i></p>
 
             </div>
         </div>
-        <div class="date-v-card">
+        <div class="date-v-card highlight">
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Expert Talk on AI and Ethics</h4>
