--- a/index.html
+++ b/index.html
@@ -1485,7 +1485,8 @@
             <strong>Expert Talk: <br>AI and Ethics</strong>
             <span>Speaker : <a href="https://vijaykeswani.github.io/">Prof. Vijay Keswani</a></span>
             <span>February 11, 2026</span>
-            <span>3:30 pm - 5 pm</span>
+            <span>3:00 pm - 5:30 pm</span>
+            <span>Block 6 LT 1</span>
         </div>
         <div class="schedule-item">
             <strong>Hackathon</strong>
@@ -1677,9 +1678,10 @@
         <div class="date-v-card highlight">
             <span class="v-dot"></span>
             <div class="v-content">
-                <h4>Expert Talk on AI and Ethics</h4>
+                <h4>Expert Talk on AI and Ethics by <a href="https://vijaykeswani.github.io/">Prof. Vijay Keswani</a></h4>
                 <p>February 11, 2026</p>
-                <p><i>Classroom venue will be updated</i></p>
+                <p>3:00 p.m. - 5:30 p.m. </p>
+                <p><i>Block 6 LT 1</i></p>
                 <p><i>Refreshments will be served</i></p>
             </div>
         </div>
