--- a/index.html
+++ b/index.html
@@ -1437,8 +1437,10 @@
 
     <!-- Slideshow -->
     <div class="slides desktop-slides">
-        <img src="i1.png" class="slide active">
+        <img src="o1.jpeg" class="slide active">
+        <img src="i1.png" class="slide">
         <img src="i2.png" class="slide">
+        <img src="o2.jpeg" class="slide">
         <img src="i3.png" class="slide">
         <img src="i4.png" class="slide">
         <img src="i5.png" class="slide">
