--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
     margin-left: auto;
     margin-right: auto;
 }
+
 @media (max-width: 600px) {
     .team-grid {
         grid-template-columns: 1fr;
@@ -1677,7 +1678,7 @@
 
             </div>
         </div>
-        <div class="date-v-card highlight">
+        <div class="date-v-card">
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Expert Talk on AI and Ethics by <a href="https://vijaykeswani.github.io/">Prof. Vijay Keswani</a></h4>
@@ -1870,6 +1871,11 @@ Build. Compete. Get noticed by Microsoft.
                 <img class="photo" src="sheriya.png" alt="Sheriya Sareen">
                 <h4>Sheriya Sareen</h4>
                 <p>Project Lead</p>
+            </div>
+            <div class="team-member">
+                <img class="photo" src="AS 2.jpeg" alt="Aafreen Shah">
+                <h4>Aafreen Shah</h4>
+                <p>Project Scientist</p>
             </div>
             <div class="team-member">
                 <img class="photo" src="deepakshi.png" alt="Deepakshi Bhardwaj">
